@@ -4,6 +4,83 @@ use strict;
 use vars qw($VERSION);
 $VERSION = '0.00_02';
 
+use vars qw( $UNDEF_CHAR $UNDEF2 $UNDEF4 );
+$UNDEF_CHAR = 'x';
+$UNDEF4 = $UNDEF_CHAR x 4;   # xxxx
+$UNDEF2 = $UNDEF_CHAR x 2;   # xx
+
+
+sub new 
+{
+    # There is not much parameter checking, because we don't know in advance
+    # which Calendar will be used. But this may change later.
+    my $class = shift;
+    my %param = @_;
+
+    # There is no point in accepting 'language', because there is no
+    # set_language() method in DateTime (yet)
+    die "Parameter 'language' is not supported" if exists $param{language};
+
+    # That's all it takes
+    my $self = bless { %param }, $class;
+    return $self;
+}
+
+sub set
+{
+    # There is not much parameter checking, because we don't know in advance
+    # which Calendar will be used. But this may change later.
+    die "set() requires a field name and a value" unless $#_ == 2;
+    $_[0]->{ $_[1] } = $_[2];
+}
+
+sub set_time_zone
+{
+    die "set() requires a time_zone value" unless $#_ == 1;
+    $_[0]->{time_zone} = $_[1];
+}
+
+sub clone { bless { %{ $_[0] } }, ref $_[0] }
+
+sub year       { $_[0]->{year} }
+sub month      { $_[0]->{month} }
+sub day        { $_[0]->{day} }
+sub hour       { $_[0]->{hour} }
+sub minute     { $_[0]->{minute} }
+sub second     { $_[0]->{second} }
+sub nanosecond { $_[0]->{nanosecond} }
+sub time_zone  { $_[0]->{time_zone} }
+
+# Internal stringification methods.
+# some of these methods are not used, but they are defined just in case.
+sub _year       { defined $_[0]->year   ? sprintf( "%0.4d", $_[0]->year )   : $UNDEF4 }
+sub _month      { defined $_[0]->month  ? sprintf( "%0.2d", $_[0]->month )  : $UNDEF2 }
+sub _day        { defined $_[0]->day    ? sprintf( "%0.2d", $_[0]->day )    : $UNDEF2 }
+sub _hour       { defined $_[0]->hour   ? sprintf( "%0.2d", $_[0]->hour )   : $UNDEF2 }
+sub _minute     { defined $_[0]->minute ? sprintf( "%0.2d", $_[0]->minute ) : $UNDEF2 }
+sub _second     { defined $_[0]->second ? sprintf( "%0.2d", $_[0]->second ) : $UNDEF2 }
+sub _nanosecond { defined $_[0]->nanosecond ? sprintf( "%0.9d", $_[0]->nanosecond ) : $UNDEF_CHAR x 9 }
+
+sub ymd
+{
+    my ( $self, $sep ) = @_;
+    $sep = '-' unless defined $sep;
+    return $self->_year . $sep. $self->_month . $sep . $self->_day;
+}
+*date = \&ymd;
+
+sub hms
+{
+    my ( $self, $sep ) = @_;
+    $sep = ':' unless defined $sep;
+    return $self->_hour . $sep. $self->_minute . $sep . $self->_second;
+}
+# don't want to override CORE::time()
+*DateTime::Incomplete::time = \&hms;
+
+sub iso8601 { join 'T', $_[0]->ymd('-'), $_[0]->hms(':') }
+*datetime = \&iso8601;
+
 
 1;
 
@@ -41,7 +118,7 @@ Such values are generated by expressions like '10:30',
 
 Creates a new incomplete date:
 
-  my $dtc1 = DateTime::Incomplete->new( year => 2003 );
+  my $dti = DateTime::Incomplete->new( year => 2003 );
   # 2003-xx-xx
 
 This class method accepts parameters for each date and
@@ -53,11 +130,11 @@ Note: There is no "language" parameter.
 
 C<new> without parameters creates a completely undefined datetime:
 
-  my $dtc1 = DateTime::Incomplete->new();
+  my $dti = DateTime::Incomplete->new();
 
 The parameters can be explicitly undefined:
 
-  my $dtc1 = DateTime::Incomplete->new( year => 2003, day => undef );
+  my $dti = DateTime::Incomplete->new( year => 2003, day => undef );
 
 
 =item * set
@@ -82,14 +159,6 @@ no local time adjust is made.
 
 Creates a new object with the same datetime.
 
-
-=item * datetime
-
-Stringify the datetime, just like DateTime::datetime().
-
-Undefined fields are replaced by 'xx' or 'xxxx'.
-
-
 =item * year, month, day, hour, minute, second, nanosecond
 
 Return the field value, or C<undef>.
@@ -98,6 +167,12 @@ Return the field value, or C<undef>.
 
 This returns the C<DateTime::TimeZone> object for the datetime object,
 or C<undef>.
+
+=item * datetime, ymd, date, hms, time, iso8601
+
+These are equivalent to DateTime stringification methods with the same name, 
+except that undefined fields are replaced by 'xx' or 'xxxx'.
+
 
 =back
 
@@ -204,6 +279,8 @@ Flavio S. Glock <fglock[at]cpan.org>
 With Ben Bennett <fiji[at]ayup.limey.net>, 
 Eugene Van Der Pijll <pijll[at]gmx.net>,
 and the DateTime team.
+
+Some code was just copied from Dave Rolsky C<DateTime> module.
 
 =head1 COPYRIGHT
 
